--- a/styles/components.css
+++ b/styles/components.css
@@ -1,5 +1,5 @@
 @layer components {
   .button {
-    @apply rounded-lg py-2 px-5 bg-blue-500 text-white tracking-wider;
+    @apply rounded-lg text-base py-2 px-5 bg-blue-500 text-white tracking-wider;
   }
 }
