--- a/styles/components.css
+++ b/styles/components.css
@@ -2,4 +2,12 @@
   .button {
     @apply rounded-lg text-base py-2 px-5 bg-blue-500 text-white tracking-wider;
   }
+
+  .card {
+    @apply bg-neutral-800/70 rounded-lg;
+  }
+
+  .text-light {
+    @apply font-light text-gray-400;
+  }
 }
