--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,69 @@
 @layer base {
-  h1, h2, h3, h4 {
-    @apply text-3xl sm:text-5xl lg:text-7xl font-bold;
+  @font-face {
+    font-family: 'Gambarino';
+    src: url('/fonts/Gambarino-Regular.ttf');
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
   }
-  p {
-    @apply text-gray-300 sm:text-xl;
+
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: extralight;
+    font-weight: 100;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: light;
+    font-weight: 200;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: medium;
+    font-weight: 400;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: semibold;
+    font-weight: 500;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: bold;
+    font-weight: 600;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: extrabold;
+    font-weight: 700;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CabinetGrotesk';
+    src: url('/fonts/CabinetGrotesk-Variable.ttf');
+    font-style: black;
+    font-weight: 900;
+    font-display: swap;
   }
 }
