--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,9 +1,9 @@
 @layer utilities {
   .py-base {
-    @apply py-6 sm:py-10 md:py-14;
+    @apply py-6 sm:py-10 md:py-20;
   }
 
-  .my-base {
+  .m-base {
     @apply my-8 sm:my-14 md:my-20;
   }
 }
